--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@alpinejs/intersect": "^3.15.0",
     "@astrojs/alpinejs": "^0.4.3",
     "@types/alpinejs": "^3.13.11",
     "alpinejs": "^3.14.8",
