--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@alpinejs/intersect": "^3.15.0",
     "@astrojs/alpinejs": "^0.4.3",
+    "@astrojs/react": "^4.4.0",
     "@types/alpinejs": "^3.13.11",
+    "@types/react": "^19.1.14",
+    "@types/react-dom": "^19.1.9",
     "alpinejs": "^3.14.8",
     "astro": "^5.1.10",
     "motion": "^12.0.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwindcss-animated": "^2.0.0",
     "tailwindcss-intersect": "^2.2.0"
   },
